feat: Structure Home page HTML

--- a/index.html
+++ b/index.html
@@ -14,8 +14,67 @@
 </head>
 <body>
     <main>
-        <button class="btn-icon"></button>
+        <section class="container flex " id="topPart">
+            <div id="topPartInfo">
+                <div class="logo">
+                    <div class="logoSquare"></div>
+                    <p class="logoText font-28-700">Living</p>
+                </div>
+                <h1 class="font-40-600">Cuidanddo de cada <span>detalhe</span> da sua casa</h1>
+                <p class="font-16-400">Trazendo uma nova e incrível experiência para você e para seu lar</p>
+                <a href="#" class="font-16-600">Consumir Conteúdos</a>
+            </div>
+            <img src="./assets/img/Rectangle 2.png" alt="">
+        </section>
+
+        <div class="container flex gap-4" id="categoryMenu">
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+        </div>
+        <section class="container flex gap-1 wrap" id="posts">
+            <div class="card">
+                <img src="./assets/img/Rectangle 1.png" alt="">
+                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
+                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-600 color-primary">Acessar conteúdo</p>
+            </div>
+            <div class="card">
+                <img src="./assets/img/Rectangle 1.png" alt="">
+                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
+                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-600 color-primary">Acessar conteúdo</p>
+            </div>
+            <div class="card">
+                <img src="./assets/img/Rectangle 1.png" alt="">
+                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
+                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-600 color-primary">Acessar conteúdo</p>
+            </div>
+            <div class="card">
+                <img src="./assets/img/Rectangle 1.png" alt="">
+                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
+                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-600 color-primary">Acessar conteúdo</p>
+            </div>
+        </section>
     </main>
+    <footer class="bgc-grey-1">
+        <div class="container flex">
+            <div class="logo">
+                <div class="logoSquare"></div>
+                <p class="logoText font-28-700 color-grey-7">Living</p>
+            </div> 
+            <p class="font-16-400">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software.</p>
+            <button class="btn-greyDark">Voltar para o topo</button>
+        </div>
+    </footer>
     <script src="./pages/home/index.js"></script>
 </body>
 </html>
