feat: Structure Post page HTML

--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
             <div class="card">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
                 <p class="font-16-600 color-primary">Acessar conteúdo</p>
             </div>
             <div class="card">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
                 <p class="font-16-600 color-primary">Acessar conteúdo</p>
             </div>
             <div class="card">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
                 <p class="font-16-600 color-primary">Acessar conteúdo</p>
             </div>
             <div class="card">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you’d like. They can register as team members or join as guests – no registration required.</p>
+                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
                 <p class="font-16-600 color-primary">Acessar conteúdo</p>
             </div>
         </section>
