--- a/index.html
+++ b/index.html
@@ -10,24 +10,40 @@
     <link rel="stylesheet" href="./styles/fonts.css">
     <link rel="stylesheet" href="./styles/margins.css">
     <link rel="stylesheet" href="./styles/position.css">
+    
+    <link rel="stylesheet" href="./pages/home/index.css">
     <title>Living</title>
 </head>
 <body>
     <main>
-        <section class="container flex " id="topPart">
-            <div id="topPartInfo">
-                <div class="logo">
+        <section class="container flex spc-btwn" id="topPart">
+            <div class=" flex-col spc-btwn gap-5" id="topPartInfo">
+                <div class="logo flex gap-5">
                     <div class="logoSquare"></div>
                     <p class="logoText font-28-700">Living</p>
                 </div>
-                <h1 class="font-40-600">Cuidanddo de cada <span>detalhe</span> da sua casa</h1>
+                <h1 class="font-40-600">Cuidando de cada <span class="color-primary">detalhe</span> da sua casa</h1>
                 <p class="font-16-400">Trazendo uma nova e incrível experiência para você e para seu lar</p>
-                <a href="#" class="font-16-600">Consumir Conteúdos</a>
+                <a href="#posts" class="font-16-600">Consumir Conteúdos</a>
             </div>
             <img src="./assets/img/Rectangle 2.png" alt="">
         </section>
 
-        <div class="container flex gap-4" id="categoryMenu">
+        <div class="container flex gap-1" id="filterMenu">
+            <div class="div-next">
+                <button class="btn-icon" id="next"></button>
+            </div>
+            <div class="div-previus">
+                <button class="btn-icon" id="previus"></button>
+            </div>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
+            <button class="btn-grey">Todos</button>
             <button class="btn-grey">Todos</button>
             <button class="btn-grey">Todos</button>
             <button class="btn-grey">Todos</button>
@@ -38,26 +54,26 @@
             <button class="btn-grey">Todos</button>
             <button class="btn-grey">Todos</button>
         </div>
-        <section class="container flex gap-1 wrap" id="posts">
-            <div class="card">
+        <section class="container flex spc-btwn gap-1 wrap" id="posts">
+            <div class="card flex-col gap-3">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
                 <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
                 <p class="font-16-600 color-primary">Acessar conteúdo</p>
             </div>
-            <div class="card">
+            <div class="card flex-col gap-3">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
                 <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
                 <p class="font-16-600 color-primary">Acessar conteúdo</p>
             </div>
-            <div class="card">
+            <div class="card flex-col gap-3">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
                 <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
                 <p class="font-16-600 color-primary">Acessar conteúdo</p>
             </div>
-            <div class="card">
+            <div class="card flex-col gap-3">
                 <img src="./assets/img/Rectangle 1.png" alt="">
                 <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
                 <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
@@ -66,13 +82,13 @@
         </section>
     </main>
     <footer class="bgc-grey-1">
-        <div class="container flex">
-            <div class="logo">
+        <div class="container flex gap-1 align-center spc-btwn">
+            <div class="logo flex gap-5">
                 <div class="logoSquare"></div>
                 <p class="logoText font-28-700 color-grey-7">Living</p>
             </div> 
-            <p class="font-16-400">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software.</p>
-            <button class="btn-greyDark">Voltar para o topo</button>
+            <p class="font-16-400 color-grey-7">The passage experienced a surge in popularity during the 1960s when Letraset used it on their dry-transfer sheets, and again during the 90s as desktop publishers bundled the text with their software.</p>
+            <a href="#top"><button class="btn-greyDark" id="footerBtn">Voltar para o topo</button></a>
         </div>
     </footer>
     <script src="./pages/home/index.js"></script>
