feat: render and scroll filter menu

--- a/index.html
+++ b/index.html
@@ -29,30 +29,16 @@
             <img src="./assets/img/Rectangle 2.png" alt="">
         </section>
 
-        <div class="container flex gap-1" id="filterMenu">
+        <div class="container" id="filterContainer">
             <div class="div-next">
                 <button class="btn-icon" id="next"></button>
             </div>
             <div class="div-previus">
                 <button class="btn-icon" id="previus"></button>
             </div>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
-            <button class="btn-grey">Todos</button>
+            <div class="container flex gap-1" id="filterMenu">
+
+            </div>
         </div>
         <section class="container flex spc-btwn gap-1 wrap" id="posts">
             <div class="card flex-col gap-3">
@@ -91,6 +77,6 @@
             <a href="#top"><button class="btn-greyDark" id="footerBtn">Voltar para o topo</button></a>
         </div>
     </footer>
-    <script src="./pages/home/index.js"></script>
+    <script type="module" src="./pages/home/index.js"></script>
 </body>
 </html>
