feat: render and filter posts

--- a/index.html
+++ b/index.html
@@ -41,31 +41,8 @@
             </div>
         </div>
         <section class="container flex spc-btwn gap-1 wrap" id="posts">
-            <div class="card flex-col gap-3">
-                <img src="./assets/img/Rectangle 1.png" alt="">
-                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
-                <p class="font-16-600 color-primary">Acessar conteúdo</p>
-            </div>
-            <div class="card flex-col gap-3">
-                <img src="./assets/img/Rectangle 1.png" alt="">
-                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
-                <p class="font-16-600 color-primary">Acessar conteúdo</p>
-            </div>
-            <div class="card flex-col gap-3">
-                <img src="./assets/img/Rectangle 1.png" alt="">
-                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
-                <p class="font-16-600 color-primary">Acessar conteúdo</p>
-            </div>
-            <div class="card flex-col gap-3">
-                <img src="./assets/img/Rectangle 1.png" alt="">
-                <h3 class="font-20-600">Cuidados para manter com plantas dentro de apartamentos</h3>
-                <p class="font-16-400">Invite as many collaborators as you'd like. They can register as team members or join as guests – no registration required.</p>
-                <p class="font-16-600 color-primary">Acessar conteúdo</p>
-            </div>
         </section>
+        <div id="observed"></div>
     </main>
     <footer class="bgc-grey-1">
         <div class="container flex gap-1 align-center spc-btwn">
